I was told to make the site look less like Micronaut and more like Grails, taking inspiration from start.grails.org

--- a/app/launch/src/styles/font-overrides.css
+++ b/app/launch/src/styles/font-overrides.css
@@ -23,14 +23,14 @@
 .MuiListItem-button.Mui-selected,
 .radio-group,
 .radio-text {
-  font-family: 'Fira Sans', sans-serif !important;
+  font-family: 'Roboto', sans-serif !important;
   font-size: 1rem !important;
   font-weight: 500 !important;
 }
 
 .radio-group label,
 .input-field label {
-  font-family: 'Fira Sans', sans-serif !important;
+  font-family: 'Roboto', sans-serif !important;
   font-size: 0.75rem !important;
   font-weight: 400 !important;
 }
