--- a/app/launch/src/style.css
+++ b/app/launch/src/style.css
@@ -15,7 +15,8 @@ body {
   --theme-dark-secondary: #3a3a3a;
   --theme-dark-card-bg: #161616;
   --theme-dark-card-hover-bg: #252525;
-  --theme-light: white;
+  --theme-light: #f5f5f5;
+  --theme-light-secondary: #255AA8;
   --theme-danger: rgb(148, 16, 0);
   --label-grey: #9e9e9e;
   --label-darkgrey: #686868;
@@ -161,11 +162,14 @@ body.dark .btn-flat {
 }
 
 body.light .btn-flat {
-  color: #000;
+  color:var(--theme-light-secondary);
 }
 
+button {
+  min-height: 3rem;
+}
 button.light {
-  background-color: var(--theme-dark);
+  background-color: var(--theme-light-secondary);
   color: #fff;
 }
 
@@ -306,7 +310,7 @@ body.dark svg.micronaut-foundation polygon {
 
 @media only screen and (min-width: 601px) {
   .container {
-    width: 85%;
+    width: 100%;
   }
 }
 
@@ -321,6 +325,12 @@ body.dark svg.micronaut-foundation polygon {
     position: relative !important;
     top: 0;
     overflow-y: scroll;
+  }
+}
+
+@media only screen and (min-width: 993px) {
+  .container {
+    width: 100%;
   }
 }
 
