--- a/app/launch/src/components/AltFooter/AltFooter.css
+++ b/app/launch/src/components/AltFooter/AltFooter.css
@@ -27,7 +27,7 @@ footer .content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center; 
+  align-items: inherit; 
 }
 
 .ocihometograils {
